# vrchat-scanner

./: .dockerignore  .gitignore  AGENTS.md  CONFIG.md  Cargo.toml  Dockerfile  README.md  implementation_plan.md  implementation_plan_whitelist.md  wrangler.jsonc
.github/: release.yml
.github/workflows/: ci.yml  release.yml
benches/: scan_performance.rs
src/: config.rs  lib.rs  main.rs  pipeline.rs  terminal.rs  whitelist.rs
src/analysis/: mod.rs
src/analysis/assets/: audio_scanner.rs  mod.rs  prefab_scanner.rs  texture_scanner.rs
src/analysis/dll/: dotnet_scanner.rs  import_scanner.rs  mod.rs  pe_parser.rs  string_extractor.rs
src/analysis/metadata/: dependency_graph.rs  meta_parser.rs  mod.rs
src/analysis/scripts/: mod.rs  obfuscation.rs  pattern_matcher.rs  preprocessor.rs  url_extractor.rs
src/export/: mod.rs
src/ingestion/: extractor.rs  file_record.rs  mod.rs  type_detection.rs
src/report/: cli_reporter.rs  finding.rs  json_reporter.rs  mod.rs  sanitize_reporter.rs  txt_reporter.rs
src/sanitize/: mod.rs  rebuilder.rs  script_neutralizer.rs
src/scoring/: context.rs  mod.rs  scorer.rs
src/server/: mod.rs
src/tree/: mod.rs
src/utils/: entropy.rs  error.rs  mod.rs  patterns.rs
tests/: integration.rs
tests/fixtures/clean/: clean_script.cs  vrchat_pickup.cs
tests/fixtures/edge_cases/: borderline_script.cs
tests/fixtures/malicious/: malicious_script.cs  (+1 more)
tests/integration/: clean_package.rs  edge_cases.rs  export.rs  malicious_dll.rs  metadata_analysis.rs  obfuscated_script.rs  scoring_pipeline.rs  texture_analysis.rs  tree_output.rs  url_detection.rs
worker/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts
worker/migrations/: 0001_create_scan_cache.sql  0002_create_scans.sql
worker/public/: app.css  app.js  index.html
worker/src/: cache.ts  embed.ts  history.ts  index.ts  kv.ts  upload.ts
(+18 files in other folders)
